[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dijkstra-optimization-toolkit"
version = "0.2.0"
description = "Six shortest-path algorithms with a unified API and a head-to-head benchmark"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Yunhao Dou" }]
keywords = [
    "algorithm", "dijkstra", "a-star", "bellman-ford", "floyd-warshall",
    "shortest-path", "graph-algorithms", "benchmark", "bidirectional-search"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/YunhaoDou/dijkstra-algorithm-optimization"
Repository = "https://github.com/YunhaoDou/dijkstra-algorithm-optimization"

[tool.hatch.build.targets.wheel]
packages = ["src"]
